fix: - Warnings found by FindBugs.
SVN: 4212