@@ -61,8 +61,8 @@ public class DownloadFileGridModel extends AbstractFileGridModel
             final Long size = file.getSize();
             final Object[] objects =
                     new Object[]
-                        { new Integer((int) file.getID()), file.getName(), file.getContentType(),
-                                size == null ? null : new Integer(size.intValue()),
+                        { Integer.valueOf((int) file.getID()), file.getName(), file.getContentType(),
+                                size == null ? null : Integer.valueOf(size.intValue()),
                                 UserRenderer.createUserAnchor(file.getRegisterer()), file.getRegistrationDate(),
                                 file.getExpirationDate() };
             list.add(objects);
