@@ -60,10 +60,9 @@ public class UploadedFileGridModel extends AbstractFileGridModel
             final Long size = file.getSize();
             final Object[] objects =
                     new Object[]
-                        { new Integer((int) file.getID()),
-                                file.getName(),
+                        { Integer.valueOf((int) file.getID()), file.getName(),
                                 file.getContentType(),
-                                size == null ? null : new Integer(size.intValue()),
+                                size == null ? null : Integer.valueOf(size.intValue()),
                                 file.getRegistrationDate(),
                                 file.getExpirationDate(),
                                 // TODO 2008-02-12, Christian Ribeaud: use DOM class here and ensure we get the hand
